--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
+    "framer-motion": "^2.9.4",
     "gsap": "^3.5.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
